--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -49,6 +49,7 @@ pytest==8.3.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2024.2
+pywin32==310
 referencing==0.35.1
 requests==2.32.3
 rich==13.9.4
